Issue #INT-421 by bisle: Added a whitespace property to the table on the Translation Configuration tab. This causes the visual error on Commerce to go away and it tightens up the overall appearance on the standard distro.

--- a/style/base.css
+++ b/style/base.css
@@ -411,4 +411,6 @@ a.ltk-action:hover {
   padding:0;
   margin:0;
 }
-
+#lingotek-admin-additional-translation-settings-form label{
+ white-space: pre-wrap;
+}
