--- a/style/lingotek-base-shim.css
+++ b/style/lingotek-base-shim.css
@@ -411,3 +411,7 @@ a.ltk-action:hover {
   padding:0;
   margin:0;
 }
+#lingotek-admin-additional-translation-settings-form label{
+ white-space: pre-wrap;
+}
+
